# airflow-google-cloud-run-plugin

./: .gitignore  README.md  pyproject.toml  tox.ini
airflow_google_cloud_run_plugin/: exceptions.py
airflow_google_cloud_run_plugin/cloud_run_v1/: client.py
airflow_google_cloud_run_plugin/cloud_run_v1/namespaces/: __init__.py  execution.py  job.py
airflow_google_cloud_run_plugin/cloud_run_v1/types/: __init__.py  condition.py  container.py  execution_spec.py  object_meta.py  task_spec.py
airflow_google_cloud_run_plugin/cloud_run_v1/utils/: __init__.py  mixins.py
airflow_google_cloud_run_plugin/hooks/: cloud_run.py
airflow_google_cloud_run_plugin/operators/: cloud_run.py
airflow_google_cloud_run_plugin/operators/cloud_run/: __init__.py  base.py  core.py  crud.py
tests/: test_version.py
tests/unit/cloud_run_v1/: test_namespaces.py
tests/unit/operators/: test_cloud_run_job_operator.py
